# SupercellTexture

./: CMakeLists.txt  README.md
cli-tool/: CMakeLists.txt
cli-tool/source/: main.cpp
cmake/: dependencies.cmake
supercell-texture/: CMakeLists.txt
supercell-texture/sctx_schemas/: MipMapData.fbs  TextureData.fbs
supercell-texture/source/: compressed_image.h  texture.h
supercell-texture/source/backend/Khronos/: KhronosTexture.cpp  KhronosTexture1.cpp
supercell-texture/source/texture/: texture.h
supercell-texture/source/texture/backend/Khronos/: KhronosTexture.cpp  KhronosTexture.h  KhronosTexture1.cpp  KhronosTexture1.h  KhronosTexture2.cpp  KhronosTexture2.h
supercell-texture/source/texture/backend/Supercell/: ScMipMap.h  ScPixel.hpp  ScTextureLevel.h  SupercellTexture.cpp  SupercellTexture.h
supercell-texture/source/texture/interface/: compressed_image.h
